@@ -1,3 +1,4 @@
+* Show all products by category
 * Limit cost method to fixed for service
 * Move cost_price from Template to Product
 
